# Engine3D-Editor

./: .gitignore  Application.cpp  CMakeLists.txt  EditorLayer.cpp  EditorLayer.h  EngineProfile-Runtime.json  EngineProfile-Shutdown.json  README.md  compile_commands.json  conanfile.py  imgui.ini
.cache/clangd/index/: Application.cpp.47E311B0C1B45EC3.idx  ContentBrowserPanel.cpp.E3F26A097CD60D41.idx  ContentBrowserPanel.h.AEBFFC45C605D5D8.idx  EditorLayer.cpp.47A6EFA89C63E4E6.idx  EditorLayer.h.E8C88ABD2730C787.idx  SceneHeirarchyPanel.cpp.77FA76BB5DE68CC2.idx  SceneHeirarchyPanel.h.0EF0A3E89BC67E66.idx
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
Debug/.cmake/api/v1/reply/: codemodel-v2-77753a0245db6a37d0fb.json  codemodel-v2-9c67bd3e560cc7cb28b6.json  codemodel-v2-be37545b06b7cf46245d.json  codemodel-v2-cb0db365099eabae8482.json  index-2024-02-12T00-34-34-0198.json  index-2024-03-12T12-28-15-0583.json  index-2024-03-26T08-33-50-0620.json  index-2024-03-28T06-51-46-0200.json  target-Editor-Debug-362180feb00e84cb18e7.json  target-Editor-Debug-6f7008d05cab2e1ea271.json  target-Editor-Debug-826699b70f32f9e8b93f.json  target-Editor-Debug-e4e36954d69001645523.json
Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHeirarchyPanel.cpp  SceneHeirarchyPanel.h
Resources/: FooPhysicsWorks.engine
Resources/Scene/: ActualPhysicsScene.engine  FooPhysicsWorks.engine  NewWorkingPhysicsSim.engine  PhysicsSceme.engine
Resources/shaders/: Renderer2D_Circle.glsl
UI/: UI.h
scenes/: NewPhysicsWorks.engine  NewPhysicsWorldWorks.engine  NewTest.engine
